# telegram-cli

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindLibConfig.cmake
src/: interface.c  loop.c  lua-tg.c  main.c
